--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "axios": "^0.21.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
