--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "todo_list",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.12.10",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "axios": "^0.21.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
-    "turbolinks": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "version": "0.1.0",
   "devDependencies": {
