--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "use-debounce": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
