--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.19",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
@@ -15,10 +20,13 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
+    "ts-loader": "^8.0.13",
+    "typescript": "^4.1.3",
     "use-debounce": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
