--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-sortablejs": "^6.0.0",
+    "sortablejs": "^1.10.2",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.13",
     "typescript": "^4.1.3",
@@ -29,6 +31,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "@types/react": "^17.0.0",
+    "@types/sortablejs": "^1.10.6",
     "webpack-dev-server": "^3.11.0"
   }
 }
