--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "@types/react": "^17.0.0",
+    "@types/react-grid-layout": "^1.1.1",
     "@types/sortablejs": "^1.10.6",
     "webpack-dev-server": "^3.11.0"
   }
