--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.12.10",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -16,6 +18,7 @@
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "date-fns": "^2.16.1",
     "material-icons": "^0.5.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
